# pioneer

./: .env.example  .gitignore  pyproject.toml
docs/: architecture.md  implementation.md
src/pioneer/: __init__.py  config.py
src/pioneer/anomaly_detector/: __init__.py
src/pioneer/chat_presentation/: __init__.py
src/pioneer/contracts/: __init__.py  anomalies.py  game_state.py  geometry.py  intent.py  locations.py  placement.py  planning.py  production_graph.py  recipes.py  resources.py  responses.py
src/pioneer/expansion_advisor/: __init__.py
src/pioneer/graph_presentation/: __init__.py
src/pioneer/knowledge_base/: __init__.py  loader.py  parsing.py  queries.py
src/pioneer/location_advisor/: __init__.py
src/pioneer/map_presentation/: __init__.py
src/pioneer/orchestrator/: __init__.py
src/pioneer/production_planner/: __init__.py
src/pioneer/qa_engine/: __init__.py
src/pioneer/resource_db/: __init__.py
src/pioneer/save_parser/: __init__.py
src/pioneer/server_client/: __init__.py
src/pioneer/verification_feedback/: __init__.py
src/pioneer/verifier/: __init__.py
tests/: test_contracts.py  test_scaffolding.py
tests/contracts/: test_contracts.py
tests/knowledge_base/: test_loader.py  test_parsing.py  test_queries.py  test_real_docs.py
tests/knowledge_base/fixtures/: mini_docs.json
